# resume-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/resume_agent/: __init__.py  agent.py  cli.py  config.py  debug_trace.py  loaders.py  memory.py  message_utils.py  orchestrator.py  parser.py  schemas.py  sub_agents.py  tools.py  user_profile_store.py
tests/: __init__.py  test_loaders.py  test_memory.py
